--- a/free-nodes/2025-3-6-free-subscribe-node.htm
+++ b/free-nodes/2025-3-6-free-subscribe-node.htm
@@ -150,6 +150,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2025/03/1-20250306.yaml</p><p>https://clashgithub.github.io/uploads/2025/03/2-20250306.yaml</p><p>https://clashgithub.github.io/uploads/2025/03/3-20250306.yaml</p><p>https://clashgithub.github.io/uploads/2025/03/4-20250306.yaml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2025/03/0-20250306.txt</p><p>https://clashgithub.github.io/uploads/2025/03/1-20250306.txt</p><p>https://clashgithub.github.io/uploads/2025/03/4-20250306.txt</p><p><strong>sing-box订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2025/03/20250306.json</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-type="Mugua" data-code="MQag6brk" rel="nofollow noopener" style="color:#c00;">木瓜云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>                <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-3-5-node-share-links.htm">3月5日→18.8M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-3-7-clash-v2ray-ss-ssr.htm">3月7日→18.3M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -178,16 +179,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-39787.htm" title="青岛动物医院招聘官网（青岛动物医院 南京路）">青岛动物医院招聘官网（青岛动物医院 南京路）</a></li>
-                        <li class="py-2"><a href="/news/article-38789.htm" title="Springboot 设置过滤器以及重复读取request里的body">Springboot 设置过滤器以及重复读取request里的body</a></li>
-                        <li class="py-2"><a href="/news/article-61907.htm" title="活体猫托运多少钱（活猫托运价格查询）">活体猫托运多少钱（活猫托运价格查询）</a></li>
-                        <li class="py-2"><a href="/news/article-47212.htm" title="动物医院的仪器设备是什么 动物医院的仪器设备是什么东西">动物医院的仪器设备是什么 动物医院的仪器设备是什么东西</a></li>
-                        <li class="py-2"><a href="/news/article-41273.htm" title="上海兽用疫苗厂家（上海兽用疫苗厂家有哪些）">上海兽用疫苗厂家（上海兽用疫苗厂家有哪些）</a></li>
-                        <li class="py-2"><a href="/news/article-57835.htm" title="猫三联疫苗多少钱一只（猫三联疫苗多少钱一只）">猫三联疫苗多少钱一只（猫三联疫苗多少钱一只）</a></li>
-                        <li class="py-2"><a href="/news/article-49197.htm" title="给健康动物注射疫苗属于（给健康动物注射疫苗属于几级预防）">给健康动物注射疫苗属于（给健康动物注射疫苗属于几级预防）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-9-clash-v2ray-ss-ssr.htm" title="2月9日→21.7M/S|2025年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐">2月9日→21.7M/S|2025年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-37316.htm" title="我所在的城市有一家宠物医院英语翻译怎么说（在我的城市有一家宠物医院英文）">我所在的城市有一家宠物医院英语翻译怎么说（在我的城市有一家宠物医院英文）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-25-free-clash-subscribe.htm" title="1月25日→18.4M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">1月25日→18.4M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-21-free-node-subscribe.htm" title="1月21日→22M/S|2025年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">1月21日→22M/S|2025年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-44751.htm" title="被家猫抓了轻微渗血需要打多少针（被家猫抓了轻微渗血需要打多少针狂犬疫苗）">被家猫抓了轻微渗血需要打多少针（被家猫抓了轻微渗血需要打多少针狂犬疫苗）</a></li>
+                        <li class="py-2"><a href="/news/article-58965.htm" title="Springboot中整合knife4j接口文档">Springboot中整合knife4j接口文档</a></li>
+                        <li class="py-2"><a href="/news/article-37812.htm" title="动物疫苗打几次有效果啊 动物疫苗打几次有效果啊视频">动物疫苗打几次有效果啊 动物疫苗打几次有效果啊视频</a></li>
+                        <li class="py-2"><a href="/news/article-63713.htm" title="动物防疫站可以打疫苗吗多少钱（动物防疫中心可以打疫苗吗）">动物防疫站可以打疫苗吗多少钱（动物防疫中心可以打疫苗吗）</a></li>
+                        <li class="py-2"><a href="/news/article-45237.htm" title="java遍历map、map键排序、值排序">java遍历map、map键排序、值排序</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-2-free-shadowrocket-node.htm" title="2月2日→21.6M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">2月2日→21.6M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-6-free-subscribe-node.htm" title="3月6日→22.4M/S|2025年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐">3月6日→22.4M/S|2025年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-57834.htm" title="OpenSSL编译过程和报错解决">OpenSSL编译过程和报错解决</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-11-free-high-speed-nodes.htm" title="2月11日→22.5M/S|2025年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐">2月11日→22.5M/S|2025年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -199,7 +200,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">84</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
